# warlock-gateway

./: .gitignore  Cargo.toml  Makefile  README.md
.sqlx/: query-01960bf45f00f1ee9fc81168a566eaff1538f3612e2a98fe3de89dae0048231f.json  query-253cf70f994325accc99915ccbb1aa8a3121620c4b9958e779aae49cad1d9e69.json  query-292f684672bb9310938873e45372d46de5858db3183a44d5becf5ba489425668.json  query-2c7bc7fac7472926fe58c65045bee5b645dba0b9429194e5f983098745459c0f.json  query-2e4cc29cd48a1f9908a262ebc4fbbb6ab8d12ff29c8bf0067082f3b411373ca3.json  query-33ed7a9878bb8e3c3e0b0044e052ba45ca7cba365097a46df270812909347769.json  query-36cac8a595060e5da1ee9cd4dcc308d77b1752748ffe622594122572c8dda926.json  query-4349307fde8242272613a127b167abd53f1be110c042dfa0afddfb1b0d9e58c2.json  query-47658cfd88c5d047ec228c39c0ff09fd4612d1389c99279761e98b3ca2fb741e.json  query-4c68a560990e4548d29f371708de54e96f57a826d9e4d360ca297e4309cb3347.json  query-524661b1d0f9f8bb4dca6f763ba5e6ebaccc474cae555629553b1c7f872987bb.json  query-766725a5f70e5d7c857c16c7ae7482c622d5d442600ca2ca21da3fbfa5798a56.json  query-79e1492539d192630fab9d054447f9c4bde4419c5d582a49552c0067a4acd68b.json  query-952b03d92b1b42388cbe4e15da5f9727fc17139c80171b599d8dd28bfcb237bc.json  query-964e5f3269ffa8f42f79a24afea2b00eafc56e6385243d2c2fb6831572680b81.json  query-b0a176f4fcefd751e6c9ae149619b882f6ae65ef678eedd608069253d63bc44a.json  query-c00e5517f7bd711adb101a2369b41b82eeec7e036b940c6dc436b06229227feb.json
migrations/: 001_initial.sql  002_add_capacity_tracking.sql
scripts/: install.sh
src/: config.rs  db.rs  health.rs  lib.rs  (+3 more)
(+6 files in other folders)
