[package]
name = "warlock-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "warlock_gateway"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
